[package]
name = "keyden"
version = "0.1.5"
edition = "2024"
description = "Keyden: a simple CLI and library for managing, rotating, and generating secret keys safely."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vivsh/keyden"
categories = ["command-line-utilities", "cryptography", "authentication"]
keywords = ["secret", "key-rotation", "cli", "token-management"]
publish = true

[dependencies]
argh = "0.1"
indexmap = "2"
parking_lot = "0.12"
rand = "0.9.1"
regex = "1.11.1"
thiserror = "2.0.12"
time = "0.3"


[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"       
strip = "symbols" 
lto = true       
